Add French and English buttons to toolbar

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 <div id="toolbar">
     <div class="toolbar-left">
       <button id="info-btn">?</button>
+      <button id="fr-btn">fr</button>
+      <button id="eng-btn">eng</button>
     </div>
 
     <div class="toolbar-center">
